--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 								
 								<!-- typing__module -->
 								<div class="typing__module">
-									<div class="typed-strings"><span>'m a gastronomic consultant and a vegan chef </span><span> am learning to grow my own food </span><span> live in the woods </span>
+									<div class="typed-strings"><span>'m a gastronomic consultant and a vegan chef </span><span> am learning to grow my own food </span><span> live in the woods </span><span>f you need my help get in touch</span>
 									</div><span class="typed"></span>
 								</div><!-- End / typing__module -->
 								
